Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=initial-scale=1.0">
-    <title>Document</title>
+    <title>drawn flowers</title>
+    <link rel="icon" href="img/draw.png">
     <link rel="stylesheet" href="main.css">
 </head>
-<body>
 
+<body>
 <div class="container">
    <canvas id="canvas"></canvas>
    <div class="clean-btn">
